Fix help link tooltip getting in the way of the link (in header when not logged in)

--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -94,7 +94,7 @@
           <ul class="nav pull-right">
            <%= render "shared/header_user" %>
            <% if ArchivesSpaceHelp.enabled? %>
-             <li><%= link_to_help %></li>
+             <li><%= link_to_help :link_opts => {"data-placement" => (session[:user] ? "left" : "bottom")} %></li>
            <% end %>
          </ul>
         </div><!-- /.nav-collapse -->
