--- a/frontend/app/views/shared/_pagination.html.erb
+++ b/frontend/app/views/shared/_pagination.html.erb
@@ -19,7 +19,7 @@
 
       <% if @search_data['this_page'] > 1 %>
         <li>
-          <%= link_to I18n.t("pagination.previous").html_safe, params.merge(:page => @search_data['this_page'] - 1) %>
+          <%= link_to I18n.t("pagination.previous").html_safe, params.merge(:page => @search_data['this_page'] - 1), :title => I18n.t("pagination.previous_label") %>
         </li>
       <% else  %>
         <li class="disabled"><a href="#"><%= I18n.t("pagination.previous").html_safe %></a></li>
@@ -37,7 +37,7 @@
 
       <% if @search_data['this_page'] != @search_data['last_page'] %>
         <li>
-          <%= link_to I18n.t("pagination.next").html_safe, params.merge(:page => @search_data['this_page'] + 1) %>
+          <%= link_to I18n.t("pagination.next").html_safe, params.merge(:page => @search_data['this_page'] + 1), :title => I18n.t("pagination.next_label") %>
         </li>
       <% else %>
         <li class="disabled"><a href="#"><%= I18n.t("pagination.next").html_safe %></a></li>
