Handle session errors for ajax requests; Allow login form to be displayed on homepage via param ?login=true;

--- a/frontend/app/views/403.erb
+++ b/frontend/app/views/403.erb
@@ -1,5 +1,11 @@
-<%= setup_context :title => I18n.t("errors.error_403") %>
+<% if not inline? %>
+  <%= setup_context :title => I18n.t("errors.error_403") %>
+<% end %>
+
 <div class="alert alert-error">
   <h2><%= I18n.t("errors.error_403") %></h2>
   <p><%= I18n.t("errors.error_403_message") %></p>
+  <% if session[:user].nil? %>
+    <p><%= I18n.t("navbar.login_expired_link", :link => link_to(I18n.t("navbar.login"), :controller => :welcome, :action => :index, :login => true)).html_safe %></p>
+  <% end %>
 </div>
