--- a/frontend/app/views/404.erb
+++ b/frontend/app/views/404.erb
@@ -1,4 +1,7 @@
-<%= setup_context :title => I18n.t("errors.error_404") %>
+<% if not inline? %>
+  <%= setup_context :title => I18n.t("errors.error_404") %>
+<% end %>
+
 <div class="alert alert-error">
   <h2><%= I18n.t("errors.error_404") %></h2>
   <p><%= I18n.t("errors.error_404_message") %></p>
