--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -197,7 +197,7 @@ section {
 /* Form sidebar navigation */
 
 .as-nav-list {
-  width: 228px;
+  width: 200px;
   margin: 0;
   padding: 0;
   background-color: #fff;
@@ -262,5 +262,46 @@ section {
     #createPlusOne {
       width: 20%;
     }
+  }
+}
+
+/* Desktop large
+------------------------- */
+@media (min-width: 1200px) {
+  .as-nav-list {
+    width: 258px;
+  }
+}
+
+/* Desktop
+------------------------- */
+@media (max-width: 980px) {
+  .as-nav-list {
+    margin-right: 0;
+    width: 228px;
+  }
+}
+
+/* Tablet to desktop
+------------------------- */
+@media (min-width: 768px) and (max-width: 980px) {
+/* Adjust sidenav width */
+  .as-nav-list {
+    width: 150px;
+  }
+}
+
+/* Tablet
+------------------------- */
+@media (max-width: 767px) {
+  .as-nav-list {
+    width: auto;
+    margin-bottom: 20px;
+    margin-right: 20px;
+  }
+  .as-nav-list.affix {
+    position: static;
+    width: auto;
+    top: 0;
   }
 }
