--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -64,6 +64,7 @@
               <li class="dropdown import-container">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= I18n.t("navbar.import") %> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
+                  <li><%= link_to I18n.t("navbar.import_eac"), :controller => :import, :action => :index, :importer => :eac %></li>
                   <li><%= link_to I18n.t("navbar.import_ead"), :controller => :import, :action => :index, :importer => :ead %></li>
                   <li><%= link_to I18n.t("navbar.import_marcxml"), :controller => :import, :action => :index, :importer => :marcxml %></li>
                   <li><%= link_to I18n.t("navbar.import_accession_csv"), :controller => :import, :action => :index, :importer => :accession_csv %></li>
