--- a/frontend/app/views/collection_management_records/show.html.erb
+++ b/frontend/app/views/collection_management_records/show.html.erb
@@ -59,12 +59,12 @@
             <div class="row-fluid label-and-value">
   
                <div class="span3"><%= I18n.t("collection_management.processing_priority") %></div>
-               <div class="span9"><%= I18n.t("collection_management.processing_priority_#{@collection_management.processing_priority}") %></div>
+               <div class="span9"><%= I18n.t("enumerations.collection_management_processing_priority.#{@collection_management.processing_priority}", :default => @collection_management.processing_priority) %></div>
             </div>
             <div class="row-fluid label-and-value">
   
                <div class="span3"><%= I18n.t("collection_management.processing_status") %></div>
-               <div class="span9"><%= I18n.t("collection_management.processing_status_#{@collection_management.processing_status}") %></div>
+               <div class="span9"><%= I18n.t("enumerations.collection_management_processing_status.#{@collection_management.processing_status}", :default => @collection_management.processing_status) %></div>
             </div>
             <div class="row-fluid label-and-value">
   
