--- a/frontend/app/views/linked_agents/_show.html.erb
+++ b/frontend/app/views/linked_agents/_show.html.erb
@@ -1,5 +1,6 @@
 <%
    section_id = "linked_agent" if section_id.blank?
+   role_enumeration = "linked_agent_archival_record_roles" if role_enumeration.nil?
 %>
 
 <section id="<%= section_id %>" class="subrecord-form-dummy">
@@ -13,7 +14,7 @@
       <% linked_agents.each_with_index do | link, index | %>
         <div class="row-fluid">
           <div class="span3 pull1">
-            <%= I18n.t("linked_agent.role_#{link["role"]}", :default => link["role"]) %>
+            <%= I18n.t("enumerations.#{role_enumeration}.#{link["role"]}", :default => link["role"]) %>
           </div>
           <div class="span8 token-list">
             <%= render_token :object => link, 
