--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -9,56 +9,56 @@
         <h2><%= @resource.title %> <span class="label label-info"><%= I18n.t("resource._html.singular") %></span></h2>
 
         <% define_template "resource", jsonmodel_definition(:resource) do |form, resource| %>
-        <section id="basic_information">
-          <h3><%= I18n.t("resource._html.section.basic_information") %></h3>
-  
-          <%= form.label_and_textfield "title" %>
-          <% if resource.id_0 %><%= form.label_and_fourpartid %><% end %>
-          <%= form.label_and_select "level", form.possible_options_for("level", true) %>
-          <%= form.label_and_textfield "other_level" %>
-          <%= form.label_and_select "resource_type", form.possible_options_for("resource_type", true) %>
-          <%= form.label_and_select "language", form.possible_options_for("language", true) %>
-          <%= form.label_and_textarea "container_summary" %>
-          <%= form.label_and_boolean "publish" %>
-          <%= form.label_and_boolean "restrictions" %>
-          <%= form.label_and_textarea "repository_processing_note" %>
-  
-          <% if resource.ead_id or resource.ead_location %>
-            <hr/>
-            <%= form.label_and_textfield "ead_id" %>
-            <%= form.label_and_textfield "ead_location" %>
+          <section id="basic_information">
+            <h3><%= I18n.t("resource._html.section.basic_information") %></h3>
+    
+            <%= form.label_and_textfield "title" %>
+            <% if resource.id_0 %><%= form.label_and_fourpartid %><% end %>
+            <%= form.label_and_select "level", form.possible_options_for("level", true) %>
+            <%= form.label_and_textfield "other_level" %>
+            <%= form.label_and_select "resource_type", form.possible_options_for("resource_type", true) %>
+            <%= form.label_and_select "language", form.possible_options_for("language", true) %>
+            <%= form.label_and_textarea "container_summary" %>
+            <%= form.label_and_boolean "publish" %>
+            <%= form.label_and_boolean "restrictions" %>
+            <%= form.label_and_textarea "repository_processing_note" %>
+    
+            <% if resource.ead_id or resource.ead_location %>
+              <hr/>
+              <%= form.label_and_textfield "ead_id" %>
+              <%= form.label_and_textfield "ead_location" %>
+            <% end %>
+          </section>
+
+          <%= render :partial => "extents/show", :locals => { :extents => @resource.extents, :section_id => "resource_extents_" } %>
+
+          <% if @resource.dates.length > 0 %>
+            <%= render :partial => "dates/show", :locals => { :dates => @resource.dates, :section_id => "resource_dates_" } %>
           <% end %>
-        </section>
-        <% end %>
-  
-        <% readonly.emit_template("resource", @resource) %>
-  
-        <%= render :partial => "extents/show", :locals => { :extents => @resource.extents, :section_id => "resource_extents_" } %>
-  
-        <% if @resource.dates.length > 0 %>
-          <%= render :partial => "dates/show", :locals => { :dates => @resource.dates, :section_id => "resource_dates_" } %>
-        <% end %>
-        
-        <section id="finding_aid" class="subrecord-form-dummy">
-          <h3><%= I18n.t("resource._html.section.finding_aid") %></h3>
-          <div class="subrecord-form-container">
-            <div class="subrecord-form-fields">
-              <%= readonly.label_and_textfield "finding_aid_title" %>
-              <%= readonly.label_and_textfield "finding_aid_filing_title" %>
-              <%= readonly.label_and_textfield "finding_aid_date" %>
-              <%= readonly.label_and_textfield "finding_aid_author" %>
-              <%= readonly.label_and_select "finding_aid_description_rules", readonly.possible_options_for("finding_aid_description_rules", true) %>
-              <%= readonly.label_and_textfield "finding_aid_language" %>
-              <%= readonly.label_and_textfield "finding_aid_sponsor" %>
-              <%= readonly.label_and_textarea "finding_aid_edition_statement" %>
-              <%= readonly.label_and_textarea "finding_aid_series_statement" %>
-              <%= readonly.label_and_textfield "finding_aid_revision_date" %>
-              <%= readonly.label_and_textarea "finding_aid_revision_description" %>
-              <%= readonly.label_and_select "finding_aid_status", readonly.possible_options_for("finding_aid_status", true) %>
-              <%= readonly.label_and_textarea "finding_aid_note" %>
+
+          <section id="finding_aid" class="subrecord-form-dummy">
+            <h3><%= I18n.t("resource._html.section.finding_aid") %></h3>
+            <div class="subrecord-form-container">
+              <div class="subrecord-form-fields">
+                <%= form.label_and_textfield "finding_aid_title" %>
+                <%= form.label_and_textfield "finding_aid_filing_title" %>
+                <%= form.label_and_textfield "finding_aid_date" %>
+                <%= form.label_and_textfield "finding_aid_author" %>
+                <%= form.label_and_select "finding_aid_description_rules", form.possible_options_for("finding_aid_description_rules", true) %>
+                <%= form.label_and_textfield "finding_aid_language" %>
+                <%= form.label_and_textfield "finding_aid_sponsor" %>
+                <%= form.label_and_textarea "finding_aid_edition_statement" %>
+                <%= form.label_and_textarea "finding_aid_series_statement" %>
+                <%= form.label_and_textfield "finding_aid_revision_date" %>
+                <%= form.label_and_textarea "finding_aid_revision_description" %>
+                <%= form.label_and_select "finding_aid_status", form.possible_options_for("finding_aid_status", true) %>
+                <%= form.label_and_textarea "finding_aid_note" %>
+              </div>
             </div>
-          </div>
-        </section>
+          </section>
+        <% end %>
+
+        <% readonly.emit_template("resource", @resource) %>
 
         <% if @resource.related_accessions.length > 0 %>
           <%= render :partial => "related_accessions/show", :locals => { :related_accessions => @resource.related_accessions, :section_id => "resource_related_accessions_" } %>
