Switch the 'content' field of notes to allow multiple text parts rather than just a single one.

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -489,8 +489,12 @@ ul.subrecord-form-list {
   border: 1px solid rgba(0,0,0,.2);
 }
 
-
 /* Filter fields */
 .text-filter-field {
   width: 80%;
+}
+
+
+.content-list .CodeMirror {
+  clear: both;
 }
