--- a/frontend/app/views/notes/_template.html.erb
+++ b/frontend/app/views/notes/_template.html.erb
@@ -11,6 +11,26 @@
    end
 %>
 
+<% define_template "content_item" do |form, item| %>
+  <div class="subrecord-form-fields"><%= form.textarea(nil, item, :class => "mixed-content") %></div>
+<% end %>
+
+
+<% define_template "content_items" do |form, opts = {}| %>
+  <div class="control-group <% if opts[:required] %>required<% end %>">
+    <label class="control-label"><%= I18n.t("content_items.content") %></label>
+    <div class="controls content-list">
+      <%= form.list_for((form["content"] || [""]), "content[]") do |item| %>
+        <% form.emit_template("content_item", item) %>
+      <% end %>
+      <% if not form.readonly? %>
+        <button class="btn btn-mini add-content-item-btn"><%= I18n.t("actions.add") %> <%= I18n.t("note.item") %></button>
+      <% end %>
+    </div>
+  </div>
+<% end %>
+
+
 <% define_template "note_singlepart", jsonmodel_definition(:note_singlepart) do |form| %>
   <div class="subrecord-form-fields" data-type="note_singlepart">
     <h4 class="subrecord-form-heading">
@@ -25,7 +45,7 @@
       <%= form.hidden_input(:jsonmodel_type, "note_singlepart") %>
       <%= form.label_and_textfield("label") %>
       <%= form.label_and_select("type", singlepart_note_types.keys, :field_opts => {:class => "note-type"}) %>
-      <%= form.label_and_textarea("content", :class => "mixed-content") %>
+      <% form.emit_template("content_items", :required => form.required?('content')) %>
     </div>
   </div>
 <% end %>
@@ -79,7 +99,8 @@
       <%= form.hidden_input(:jsonmodel_type, "note_multipart") %>
       <%= form.label_and_textfield("label") %>
       <%= form.label_and_select("type", multipart_note_types.keys, :field_opts => {:class => "note-type"}) %>
-      <%= form.label_and_textarea("content", :class => "mixed-content") %>
+
+      <% form.emit_template("content_items", :required => form.required?('content')) %>
 
       <section class="subrecord-form">
         <h5 class="subrecord-form-heading">
@@ -149,7 +170,7 @@
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_index") %>
       <%= form.label_and_textfield("label") %>
-      <%= form.label_and_textarea("content", :class => "mixed-content") %>
+      <% form.emit_template("content_items", :required => form.required?('content')) %>
 
       <section class="subrecord-form">
         <h5 class="subrecord-form-heading">
@@ -232,7 +253,7 @@
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_bibliography") %>
       <%= form.label_and_textfield("label") %>
-      <%= form.label_and_textarea("content", :class => "mixed-content") %>
+      <% form.emit_template("content_items", :required => form.required?('content')) %>
 
       <div class="control-group">
         <label class="control-label"><%= I18n.t("note_bibliography.items") %></label>
@@ -272,7 +293,7 @@
       <%= form.hidden_input(:jsonmodel_type, "note_digital_object") %>
       <%= form.label_and_textfield("label") %>
       <%= form.label_and_select("type", digital_object_note_types.keys, :field_opts => {:class => "note-type"}) %>
-      <%= form.label_and_textarea("content", :class => "mixed-content") %>
+      <% form.emit_template("content_items", :required => form.required?('content')) %>
     </div>
   </div>
 <% end %>
