--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row-fluid">
   <div class="span3">
-    The facets/search filters will go here.
+      <%= render :partial => "search/filter" %>
   </div>
   <div class="span9">
     <div class="record-pane">
@@ -11,47 +11,11 @@
           <%= link_to "Create Accession", {:controller => :accessions, :action => :new}, :class => "btn" %>
         <% end %>
       </div>
-      <h2>Accessions</h2>
+      <h2><%= I18n.t("accession._html.plural") %></h2>
 
       <%= render :partial => "shared/flash_messages" %>
 
-      <% if @search_data.has_key?('results') && @search_data['results'].length  > 0 %>
-         <table class="table table-striped table-bordered table-condensed">
-           <thead>
-             <tr>
-               <th>Title</th>
-               <th>Identifier</th>
-               <th>Accession Date</th>
-               <th width="70px"><!-- actions --></th>
-             </tr>
-           </thead>
-           <tbody>
-              <% @search_data['results'].each do |accession| %>
-              <tr>
-               <td>
-                <% if accession.suppressed %><span class="label label-info">Suppressed</span><% end %>
-                <%= accession.title %>
-               </td>
-               <td><%= accession.ref_id %></td>
-               <td><%= Date.strptime(accession.accession_date, "%Y-%m-%d") %></td>
-               <td>
-                  <div class="btn-group" style="float: right">
-                    <%= link_to I18n.t("actions.view"), {:controller => :accessions, :action => :show, :id => accession.id}, :class => "btn btn-mini" %>
-                    <% if user_can?('update_archival_record') and not accession.suppressed %>
-                      <%= link_to I18n.t("actions.edit"), {:controller => :accessions, :action => :edit, :id => accession.id}, :class => "btn btn-mini" %>
-                    <% end %>
-                  </div>
-               </td>
-             </tr>
-             <% end %>
-           </tbody>
-         </table>
-         <%= render :partial => "shared/pagination" %>
-      <% else %>
-         <p class="alert alert-info">
-            There are currently no accessions in this, <strong><%= session[:repo] %></strong>, repository.
-         </p>
-      <% end %>
+      <%= render :partial => "search/listing" %>
     </div>
   </div>
 </div>
