--- a/frontend/app/views/search/_listing.html.erb
+++ b/frontend/app/views/search/_listing.html.erb
@@ -1,8 +1,8 @@
-<% if @search_data.has_key?('results') && @search_data['results'].length  > 0 %>
+<% if @search_data.results? %>
   <table class="table table-striped table-bordered table-condensed">
     <thead>
     <tr>
-      <% if @search_data[:criteria].has_key?("type[]") and @search_data[:criteria]["type[]"].length > 1 or not @search_data[:criteria].has_key?("type[]") %>
+      <% if @search_data.single_type? %>
         <th width="160px"><%= I18n.t("search_results.result_type") %></th>
       <% end %>
       <th><%= I18n.t("search_results.result_title") %></th>
@@ -13,7 +13,7 @@
     <%= render :partial => "shared/pagination_summary" %>
     <% @search_data['results'].each do |result| %>
       <tr>
-        <% if @search_data[:criteria].has_key?("type[]") and @search_data[:criteria]["type[]"].length > 1 or not @search_data[:criteria].has_key?("type[]") %>
+        <% if @search_data.single_type? %>
           <td>
             <%=  I18n.t("#{result["primary_type"]}._html.singular") %>
           </td>
