Add the accession's date year to the index to allow for a facet

--- a/frontend/app/views/search/_listing.html.erb
+++ b/frontend/app/views/search/_listing.html.erb
@@ -37,6 +37,6 @@
   <%= render :partial => "shared/pagination" %>
 <% else %>
   <p class="alert alert-info">
-    <%= I18n.t("search_results.no_results_prefix") %> <em><%= params[:q] %></em>.
+    <%= I18n.t("search_results.no_results") %>
   </p>
 <% end %>
