WIP add sorting of the title field

--- a/frontend/app/assets/stylesheets/archivesspace.less
+++ b/frontend/app/assets/stylesheets/archivesspace.less
@@ -5,6 +5,7 @@
 @import "archivesspace/header";
 @import "archivesspace/token-input";
 @import "archivesspace/form";
+@import "archivesspace/tables";
 @import "archivesspace/tree";
 @import "datepicker";
 @import "../../codemirror/codemirror.css";
