--- a/frontend/app/views/agents/index.html.erb
+++ b/frontend/app/views/agents/index.html.erb
@@ -26,7 +26,7 @@
       <h2>Agents</h2>
 
       <% if not @agents.blank? %>
-       <table class="table table-striped table-bordered table-condensed">
+       <table class="table table-striped table-bordered table-condensed table-sortable">
          <thead>
            <tr>
              <th><%= I18n.t("agent_name.sort_name") %></th>
