--- a/frontend/app/views/search/_listing.html.erb
+++ b/frontend/app/views/search/_listing.html.erb
@@ -1,11 +1,15 @@
 <% if @search_data.results? %>
-  <table class="table table-striped table-bordered table-condensed">
+  <table class="table table-striped table-bordered table-condensed table-hover table-sortable">
     <thead>
     <tr>
       <% if @search_data.single_type? %>
         <th width="160px"><%= I18n.t("search_results.result_type") %></th>
       <% end %>
-      <th><%= I18n.t("search_results.result_title") %></th>
+      <th class="sortable <% if @search_data.sorted_by === "title"%>sort-<%= @search_data.sort_direction %><% end %>">
+        <%= link_to I18n.t("search_results.result_title"), params_for_search("sort" => "title #{@search_data.sort_direction_opposite}") %>
+      </th>
+      <!-- <th class="table-audit-cell sortable"><%= I18n.t("search_results.modified") %></th>
+      <th class="table-audit-cell sortable"><%= I18n.t("search_results.created") %></th>-->
       <th width="70px"><!-- actions --></th>
     </tr>
     </thead>
@@ -22,6 +26,8 @@
           <% if result["suppressed"] %><span class="label label-info"><%= I18n.t("states.suppressed") %></span><% end %>
           <%=  result["title"] || result['display_string'] %>
         </td>
+        <!-- <td></td>
+        <td></td> -->
         <td>
           <div class="btn-group" style="float: right">
             <%= link_to I18n.t("actions.view"), {:controller => :resolver, :action => :resolve_readonly, :uri => result["id"]}, :class => "btn btn-mini" %>
