--- a/frontend/app/views/search/_listing.html.erb
+++ b/frontend/app/views/search/_listing.html.erb
@@ -5,8 +5,8 @@
       <% if @search_data.single_type? %>
         <th width="160px"><%= I18n.t("search_results.result_type") %></th>
       <% end %>
-      <th class="sortable <% if @search_data.sorted_by === "title"%>sort-<%= @search_data.sort_direction %><% end %>">
-        <%= link_to I18n.t("search_results.result_title"), params_for_search("sort" => "title #{@search_data.sort_direction_opposite}") %>
+      <th class="sortable <% if @search_data.sorted_by === "title_sort"%>sort-<%= @search_data.sort_direction %><% end %>">
+        <%= link_to I18n.t("search_results.result_title"), params_for_search("sort" => "title_sort #{@search_data.sort_direction_opposite}") %>
       </th>
       <!-- <th class="table-audit-cell sortable"><%= I18n.t("search_results.modified") %></th>
       <th class="table-audit-cell sortable"><%= I18n.t("search_results.created") %></th>-->
