--- a/frontend/app/views/search/_listing.html.erb
+++ b/frontend/app/views/search/_listing.html.erb
@@ -4,11 +4,11 @@
     <tr>
       <% if @search_data.single_type? %>
         <th width="160px" class="sortable <% if @search_data.sorted_by === "primary_type"%>sort-<%= @search_data.current_sort_direction %><% end %>">
-          <%= link_to I18n.t("search_results.result_type"), params_for_search("sort" => "primary_type #{@search_data.sort_direction_for("primary_type")}") %>
+          <%= link_to I18n.t("search_results.result_type"), params_for_search("sort" => @search_data.sort_filter_for("primary_type")) %>
         </th>
       <% end %>
       <th class="sortable <% if @search_data.sorted_by === "title_sort"%>sort-<%= @search_data.current_sort_direction %><% end %>">
-        <%= link_to I18n.t("search_results.result_title"), params_for_search("sort" => "title_sort #{@search_data.sort_direction_for("title_sort")}") %>
+        <%= link_to I18n.t("search_results.result_title"), params_for_search("sort" => @search_data.sort_filter_for("title_sort")) %>
       </th>
       <!-- <th class="table-audit-cell sortable"><%= I18n.t("search_results.modified") %></th>
       <th class="table-audit-cell sortable"><%= I18n.t("search_results.created") %></th>-->
