Add some styles to the header head row.. take 2

--- a/frontend/app/assets/stylesheets/archivesspace/tables.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tables.less
@@ -33,7 +33,8 @@ table.table-sortable {
       }
     }
     th.sort-desc {
-      background-color: #e7f4f9 !important;
+      #gradient > .vertical(#f0f7fa, #dcf1fa);
+
       > a { 
         &::after {
           visibility:visible;
